--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@ html, body{
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+h1{
+    font-family: var(--font-grotesk), sans-serif;
+}
 a{
     color: inherit;
     text-decoration: none;
